--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^5.3.0",
+    "@mantine/hooks": "^5.3.0",
+    "@mantine/next": "^5.3.0",
+    "@mantine/notifications": "^5.3.0",
+    "axios": "^0.27.2",
+    "mapbox-gl": "^2.10.0",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
