--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mapbox-gl": "^2.10.0",
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tabler-icons-react": "^1.55.0"
   },
   "devDependencies": {
     "eslint": "8.23.0",
